# Client-Server-KNN-Classifier

./: CMakeLists.txt  README.md  main.cpp
classifier/: Algorithms.cpp  Algorithms.h  Classified.cpp  Classified.h  Classifier.cpp  Classifier.h
client/: client.cpp
server/: server.cpp
